# vectorDatabase

./: .gitignore  MANIFEST.in  Makefile  README.md  bench.c  ci.yml  example.py  hybrid.c  hybrid.h  index.vecdb  pyproject.toml  pyvecdb.py  setup.py  test_kernels.c  tests.py  turboquant.c  turboquant.h  vecdb.c  vecdb.h
.github/workflows/: ci.yml
benchmarks/: bench_large.py  bench_quant_memory.py  bench_search_mt.py  bench_sift.py  bench_sift_pareto.py  bench_tq.py  benchmark.py
contrib/ann-benchmarks/: Dockerfile  README.md  config.yml  module.py
docs/: README.md
