[project]
name = "vecdbc"
version = "0.1.1"
description = "A from-scratch vector database in C (HNSW + TurboQuant + hybrid) with Python bindings"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Seyed Navid Mirnour algeri", email = "navid72m@gmail.com"}]
license = {text = "MIT"}
dependencies = ["numpy"]
keywords = ["vector-database", "ann", "nearest-neighbor", "hnsw", "quantization", "embeddings"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Topic :: Database :: Database Engines/Servers",
]

[project.urls]
Homepage = "https://github.com/navid72m/vectorDatabase"
Repository = "https://github.com/navid72m/vectorDatabase"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

# Flat layout: pyvecdb.py is a top-level module; the C sources are compiled
# into libvecdb.so by setup.py's custom build step and shipped beside it.
[tool.setuptools]
py-modules = ["pyvecdb"]
